# MARS-ssh

./: .gitignore  README.md  go.mod  go.sum
cmd/agent/: main.go
cmd/relay/: main.go
internal/agent/: client.go
internal/config/: agent.go  relay.go
internal/logsink/: logsink.go
internal/menu/: menu.go
internal/portpool/: portpool.go
internal/protocol/: protocol.go
internal/pubip/: pubip.go
internal/relay/: server.go
internal/service/: run_other.go  run_windows.go  service.go  service_linux.go  service_other.go  service_windows.go
internal/state/: state.go
internal/tlsutil/: fetch.go  gencert.go  pem.go  tlsutil.go
rust/: Cargo.toml  IMPLEMENTATION.md
rust/scripts/: build-release.ps1  smoke-bridge.ps1
rust/src/: agent.rs  config.rs  lib.rs  logsink.rs  main.rs  menu.rs  portpool.rs  protocol.rs  pubip.rs  relay.rs  service.rs  setup.rs  state.rs  tlsutil.rs
rust/tests/: ops_core.rs  relay_core.rs  setup_core.rs  shared_core.rs
rust/tests/fixtures/: relay_cert.pem  relay_key.pem
