[package]
name = "mars-agent-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
getrandom = "0.2"
hex = "0.4"
hostname = "0.4"
rcgen = "=0.13.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
time = "=0.3.36"
tokio = { version = "1.0", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-native-tls = "0.3"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12"] }
tokio-yamux = "0.3.18"
rustls-pemfile = "2.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = true
